# oxc_schema_rules

./: Cargo.toml  index.js  out.rust  package-lock.json
pkg/: index.d.ts  index_bg.js  index_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs  main2.rs  schema.graphql
