[package]
name = "oxc-schema-rules"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
apollo-parser = "0.5.3"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
trustfall = { git = "https://github.com/obi1kenobi/trustfall" }
wasm-bindgen = "0.2.87"
